--- a/SouthsideLawnCare/SouthsideLawnCare.csproj
+++ b/SouthsideLawnCare/SouthsideLawnCare.csproj
@@ -202,6 +202,7 @@
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
     <Content Include="packages.config" />
+    <None Include="Properties\PublishProfiles\SouthsideLawnCare.pubxml" />
     <None Include="Scripts\jquery-1.8.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.8.2.js" />
     <Content Include="Scripts\jquery-1.8.2.min.js" />
